Small improvement in SAJParser